force-app/main/default/objects/Order/fields/Amount_Left__c.field-meta.xml
<CustomField>
    <fullName>Amount_Left__c</fullName>
    <description>The remaining amount to be paid for the car.</description>
    <label>Amount Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>