force-app/main/default/objects/Order/fields/Payments_Count__c.field-meta.xml
<CustomField>
    <fullName>Payments_Count__c</fullName>
    <description>The number of payments made for the car.</description>
    <label>Payments Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>